{{$NEXT}}

    [ ENHANCEMENTS ]
    * When scaffolding an app, show a warning if YAML not installed.
      Prompted by Issue 496.  (David Precious)

1.3040      01.05.2011
    ** Codename: Yanick in Black // Yanick Champoux, Labor Day - May Day **

    [ ENHANCEMENTS ]
    * No functional changes, just releasing as stable.

1.3039_01   27.04.2011

    [ BUG FIXES ]
    * Fix 404 results from forwarding.
      (Alberto Simões)
    * Don't remove trailing slashes from route patterns under prefix.
      (Brian E. Lozier)
    * Remove deprecated r() function from list of exports.
      (Stefan Hornburg)
    * GH #402: make session_expires honor +2h style formatting.
      (Michael G. Schwern)
    * GH #433: encoding issues with forward().
      (Alberto Simões)
    * GH #390: Renaming access_log to startup_info (+doc).
      (Sawyer X)
    * Rewrite scalar usage of qw() that is incompatible with 5.14.
      (Alberto Simões)
    * Don't parse ARGV when under PSGI (closes #473)
      (Franck Cuny)

    [ ENHANCEMENTS ]
    * Forward can change method GH#493
      (Alberto Simões)
    * Introducing the "megasplat"!
      (Yanick Champoux)
    * More tests for versions, setings and variables.
      (Alberto Simões)
    * Improve Dancer::Test so failures report the correct line numbers.
      (Michael G. Schwern)
    * GH #466: Can now set cookies with http_only => 0 for JS integration.
      (Alberto Simões)
    * Session engine can be told to set cookies without HttpOnly attribute using
      new session_is_http_only setting.
      (Alberto Simões, requested by JT Smith)
    * GH #296: Show versions of loaded modules in startup info.
      (Sawyer X)
    * Able to set more than one value at once using set().
      (Alberto Simões)
    * GH #253: Use Clone::clone() if available to clone data before censoring.
      (Sawyer X)
    * GH #246: Dancer::Test can now test for file uploads as well.
      (Franck Cuny)
    * Allow parameters in forward().
      (Alberto Simões)
